--- a/apps/templates/home/examples-recover-password.html
+++ b/apps/templates/home/examples-recover-password.html
@@ -28,11 +28,19 @@
     <!-- /.login-logo -->
     <div class="card">
       <div class="card-body login-card-body">
-        <p class="login-box-msg">You are only one step a way from your new password, recover your password now.</p>
+        <p class="login-box-msg">You are only one step a way from your new password, recover your password now.
+        </p>
+        <p class="login-box-msg">
+          {% if msg %}
+              <span class="text-danger">{{ msg | safe }}</span>
+            {% else %}
+                Add your credentials
+            {% endif %}
+        </p>
 
-        <form action="login.html" method="post">
+        <form method="POST">
           <div class="input-group mb-3">
-            <input type="password" class="form-control" placeholder="Password">
+            <input type="password" class="form-control" placeholder="Password", name="password1">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-lock"></span>
@@ -40,7 +48,7 @@
             </div>
           </div>
           <div class="input-group mb-3">
-            <input type="password" class="form-control" placeholder="Confirm Password">
+            <input type="password" class="form-control" placeholder="Confirm Password", name="password2">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-lock"></span>
