--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -409,7 +409,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/examples-recover-password.html" class="nav-link">
+                <a href="{{url_for('authentication_blueprint.recoverpassword')}}" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Recover Password</p>
                 </a>
