--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -40,12 +40,9 @@
             {% endif %}
         </p>
 
-        <form method="post" action="">
-
-          {{ form.hidden_tag() }}
-
-          <div class="input-group mb-3">
-            {{ form.username(placeholder="Username", class="form-control") }}
+        <form method="POST" action="">
+          <div class="input-group mb-3">     
+            <input class="form-control" placeholder="Username", name="Username">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-envelope"></span>
@@ -53,7 +50,7 @@
             </div>
           </div>
           <div class="input-group mb-3">
-            {{ form.password(placeholder="Password", class="form-control", type="password") }}
+            <input type="password" class="form-control" placeholder="Password", name="Password">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-lock"></span>
@@ -80,7 +77,7 @@
         <br /><br />
 
         <div class="text-center">
-            Not a member? <a href="{{ url_for('authentication_blueprint.register') }}" class="text-center">Register</a>
+            Not a member? <a href="{{ url_for('register') }}" class="text-center">Register</a>
             <br />
             <br />
             &copy; ColorLib 
