--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -42,10 +42,8 @@
 
         <form role="form" method="post" action="">
 
-          {{ form.hidden_tag() }}
-
           <div class="input-group mb-3">
-            {{ form.username(placeholder="Username", class="form-control") }}
+            <input class="form-control" placeholder="Username", name="username">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-user"></span>
@@ -53,7 +51,7 @@
             </div>
           </div>
           <div class="input-group mb-3">
-            {{ form.email(placeholder="Email", class="form-control") }}
+            <input class="form-control" placeholder="Email", name="email">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-envelope"></span>
@@ -61,7 +59,7 @@
             </div>
           </div>
           <div class="input-group mb-3">
-            {{ form.password(placeholder="Password", class="form-control", type="password") }}
+            <input type="password" class="form-control" placeholder="Password", name="password">
             <div class="input-group-append">
               <div class="input-group-text">
                 <span class="fas fa-lock"></span>
@@ -88,7 +86,7 @@
 
         <br />
         <div class="text-center">
-            Have an account? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-center">Login</a>
+            Have an account? <a href="{{ url_for('login') }}" class="text-center">Login</a>
             <br />
             <br />
             &copy; ColorLib 
