--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -66,6 +66,14 @@
               </li>
             </ul>
           </li>
+          <li class="nav-item">
+            <a href="/watchlist.html" class="nav-link">
+              <i class="nav-icon far fa-image"></i>
+              <p>
+                Watchlist
+              </p>
+            </a>
+          </li>
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
               <i class="nav-icon far fa-plus-square"></i>
