--- a/apps/templates/layouts/base-fullscreen.html
+++ b/apps/templates/layouts/base-fullscreen.html
@@ -7,7 +7,7 @@
   <link rel="canonical" href="https://appseed.us/adminlte"/>
   
   <title>
-    AdminLTE Flask - {% block title %}{% endblock %} | AppSeed
+    Tradeyoo - {% block title %}{% endblock %} | AppSeed
   </title> 
 
   <!-- Specific Page CSS goes HERE  -->  
