--- a/apps/templates/home/main-dashboard.html
+++ b/apps/templates/home/main-dashboard.html
@@ -108,7 +108,7 @@
         <!-- ./col -->
       </div>
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
           <!-- /.card -->
 
           <div class="card">
@@ -182,7 +182,7 @@
    const stockData = JSON.parse(stocks);
    const tableBody = document.querySelector("tbody");*/
 
-  var getStockData = $.get('/data');
+  var getStockData = $.get('/main-dashboard-data');
   // Get the table body element
   getStockData.done(function (stockData) {
     const tableBody = document.querySelector("tbody");
